Adding new websites

--- a/content/publication/usa-20/cite.bib
+++ b/content/publication/usa-20/cite.bib
@@ -1,5 +1,13 @@
-@article{unwin2020state,
-  title={State-level tracking of COVID-19 in the United States},
-  author={Unwin, H Juliette T and Mishra, Swapnil and Bradley, Valerie C and Gandy, Axel and Vollmer, Michaela and Mellan, Thomas and Coupland, Helen and Ainslie, Kylie and Whittaker, Charles and Ish-Horowicz, Jonathan and others},
-  year={2020}
+@article{Unwin2020Dec,
+	author = {Unwin, H. Juliette T. and Mishra, Swapnil and Bradley, Valerie C. and Gandy, Axel and Mellan, Thomas A. and Coupland, Helen and Ish-Horowicz, Jonathan and Vollmer, Michaela A. C. and Whittaker, Charles and Filippi, Sarah L. and Xi, Xiaoyue and Monod, M{\ifmmode\acute{e}\else\'{e}\fi}lodie and Ratmann, Oliver and Hutchinson, Michael and Valka, Fabian and Zhu, Harrison and Hawryluk, Iwona and Milton, Philip and Ainslie, Kylie E. C. and Baguelin, Marc and Boonyasiri, Adhiratha and Brazeau, Nick F. and Cattarino, Lorenzo and Cucunuba, Zulma and Cuomo-Dannenburg, Gina and Dorigatti, Ilaria and Eales, Oliver D. and Eaton, Jeffrey W. and van Elsland, Sabine L. and FitzJohn, Richard G. and Gaythorpe, Katy A. M. and Green, William and Hinsley, Wes and Jeffrey, Benjamin and Knock, Edward and Laydon, Daniel J. and Lees, John and Nedjati-Gilani, Gemma and Nouvellet, Pierre and Okell, Lucy and Parag, Kris V. and Siveroni, Igor and Thompson, Hayley A. and Walker, Patrick and Walters, Caroline E. and Watson, Oliver J. and Whittles, Lilith K. and Ghani, Azra C. and Ferguson, Neil M. and Riley, Steven and Donnelly, Christl A. and Bhatt, Samir and Flaxman, Seth},
+	title = {{State-level tracking of COVID-19 in the United States}},
+	journal = {Nat. Commun.},
+	volume = {11},
+	number = {6189},
+	pages = {1--9},
+	year = {2020},
+	month = {Dec},
+	issn = {2041-1723},
+	publisher = {Nature Publishing Group},
+	doi = {10.1038/s41467-020-19652-6}
 }
